--- a/css/pages/reports.css
+++ b/css/pages/reports.css
@@ -253,3 +253,103 @@
     font-weight: 700;
     padding: 0 0 0 5%;
 }
+
+#rootDetailsSafeguars h4 {
+    color: #111827;
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-size: 1.1em;
+    font-weight: 700;
+    padding: 4% 0 0 4%;
+}
+
+#rootDetailsSafeguars p {
+    color: #6B7280;
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-size: .9em;
+    font-weight: 700;
+    padding: 3% 0 0 4%;
+}
+
+#rootCard-works {
+    height: 75%;
+    width: 95%;
+    position: relative;
+    background: #FAFAFA;
+    border: 1px solid #E0E0E0;
+    border-radius: .3em;
+    overflow-y: auto;
+    overflow-x: none;
+    margin: 5% auto 0 auto;
+}
+
+.card-work-summary {
+    height: 15em;
+    width: 98%;
+    position: relative;
+    background: #FFFFFF;
+    margin: 1em auto;
+    border: 1px solid #E0E0E0;
+}
+
+.card-work-summary > div {
+    height: 50%;
+    width: 100%;
+    border-bottom: 1px solid #E0E0E0;
+    box-sizing: border-box;
+}
+
+.card-work-summary > div:first-child h5 {
+    color: #111827;
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-size: 1.1em;
+    font-weight: 700;
+    padding: 3% 0 0 4%;
+}
+
+.card-work-summary > div:first-child p span {
+    color: #BDBDBD;
+    font-weight: 600;
+}
+
+.card-work-summary > div:last-child {
+    height: 50%;
+    width: 100%;
+    display: flex;
+    border-bottom: 0;
+    box-sizing: border-box;
+}
+
+.card-work-summary > div:last-child > div {
+    height: 100%;
+    width: 33.33%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-right: 1px solid #E0E0E0;
+    box-sizing: border-box;
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    padding-left: 4%;
+}
+
+.card-work-summary > div:last-child > div h5 {
+    font-size: .9em;
+    font-weight: 600;
+    padding-bottom: 7%;
+    color: #6B7280;
+}
+
+.card-work-summary > div:last-child > div span {
+    font-size: 1em;
+    font-weight: 600;
+    color: #111827;
+}
+
+.card-work-summary > div:last-child > div:last-child { border-right: 0; }
