--- a/css/pages/reports.css
+++ b/css/pages/reports.css
@@ -353,3 +353,213 @@
 }
 
 .card-work-summary > div:last-child > div:last-child { border-right: 0; }
+
+.root-window-details__Forehead {
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+}
+
+.root-window-details__Forehead > div {
+    height: 90%;
+    width: 90%;
+    position: relative;
+    display: flex;
+    background: #FAFAFA;
+    border-radius: .3em;
+    box-sizing: border-box;
+}
+
+#rootDetailsForehead {
+    height: 100%;
+    width: 72%;
+    position: relative;
+    background: #FAFAFA;
+    box-sizing: border-box;
+}
+
+#rootDetailsForehead > h4 {
+    padding: 2% 0 0 2%;
+    color: #111827;
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-size: .9em;
+    font-weight: 700;
+}
+
+#rootDetailsForehead > p {
+    color: #6B7280;
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-size: .8em;
+    font-weight: 700;
+    padding: 2% 0 0 2%;
+}
+
+#rootCard-forehead {
+    height: 75%;
+    width: 95%;
+    position: relative;
+    background: #FAFAFA;
+    border: 1px solid #E0E0E0;
+    border-radius: .3em;
+    overflow-y: auto;
+    overflow-x: none;
+    margin: 3% auto 0 auto;
+}
+
+.container-closeForehead {
+    height: 3em;
+    width: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid #E0E0E0;
+}
+
+.container-closeForehead button {
+    height: 70%;
+    width: 4%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 1% 0 1%;
+    background: none;
+    border: 0;
+    box-sizing: border-box;
+}
+
+.container-closeForehead button:hover { background: #EEEEEE; }
+.container-closeForehead button svg { height: 55%; width: 55%; }
+
+.container-closeForehead h4 {
+    color: #6B7280;
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-size: .9em;
+    font-weight: 700;
+}
+
+#summary-work {
+    height: 100%;
+    width: 28%;
+    position: relative;
+    background: #F5F5F5;
+    border-left: 1px solid #E0E0E0;
+    box-sizing: border-box;
+}
+
+#summary-work h4 {
+    padding: 10% 0 0 5%;
+    color: #6B7280;
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-size: .9em;
+    font-weight: 700;
+}
+
+#rootCard-category__work {
+    height: 85%;
+    width: 90%;
+    position: relative;
+    margin: 10% 0 0 5%;
+    overflow-y: auto;
+    box-sizing: border-box;
+}
+
+.card-forehead-summary {
+    height: 10em;
+    width: 98%;
+    position: relative;
+    display: flex;
+    background: #FFFFFF;
+    margin: 1em auto;
+    border: 1px solid #E0E0E0;
+    box-sizing: border-box;
+}
+
+.card-forehead-summary > div:first-child {
+    height: 100%;
+    width: 70%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-right: 1px solid #E0E0E0;
+    box-sizing: border-box;
+}
+
+.card-forehead-summary > div:first-child h5 {
+    color: #111827;
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-size: 1.1em;
+    font-weight: 700;
+    padding: 0% 0 0 4%;
+}
+
+.card-forehead-summary > div:first-child p {
+    color: #6B7280;
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-size: .9em;
+    font-weight: 700;
+    padding: 3% 0 0 4%;
+}
+
+.card-forehead-summary > div:first-child p span {
+    color: #BDBDBD;
+    font-weight: 600;
+}
+
+.card-forehead-summary > div:last-child {
+    height: 100%;
+    width: 30%;
+    position: relative;
+    box-sizing: border-box;
+}
+
+.card-forehead-summary > div:last-child > div {
+    height: 50%;
+    width: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 5%;
+    box-sizing: border-box;
+}
+
+.card-forehead-summary > div:last-child > div:first-child { border-bottom: 1px solid #E0E0E0; }
+
+.card-forehead-summary > div:last-child > div h5 {
+    font-size: .9em;
+    font-weight: 600;
+    padding-bottom: 7%;
+    color: #6B7280;
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+}
+
+.card-forehead-summary > div:last-child > div span {
+    font-size: 1em;
+    font-weight: 600;
+    color: #111827;
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+}
