--- a/css/pages/reports.css
+++ b/css/pages/reports.css
@@ -563,3 +563,101 @@
     font-optical-sizing: auto;
     font-style: normal;
 }
+
+.root-window-details__employee {
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} 
+
+.root-window-details__employee > div {
+    height: 90%;
+    width: 90%;
+    position: relative;
+    display: flex;
+    background: #FAFAFA;
+    border-radius: .3em;
+    box-sizing: border-box;
+} 
+
+#root-table__employeeFront {
+    height: 90%;
+    width: 95%;
+    position: relative;
+    margin: 2% auto;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+#root-table__employeeFront table { height: auto; width: 100%; position: relative; box-sizing: border-box; }
+#root-table__employeeFront table thead { height: auto; width: 100%; position: relative; box-sizing: border-box; }
+#root-table__employeeFront table thead tr { height: auto; width: 100%; position: relative; border-bottom: 1px solid #E0E0E0; } 
+
+#root-table__employeeFront table thead tr th {
+    padding: 1em 0;
+    text-align: left;
+    vertical-align: middle;
+    font-size: .8em;
+    font-weight: 700;
+    color: #111827;
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+}
+
+#root-table__employeeFront table tbody { height: auto; width: 100%; position: relative; box-sizing: border-box; }
+#root-table__employeeFront table tbody tr {
+    height: auto;
+    width: 100%;
+    position: relative;
+    border-bottom: 1px solid #EEEEEE;
+}
+
+#root-table__employeeFront table tbody tr td {
+    padding: 1em 0;
+    text-align: left;
+    vertical-align: middle;
+    font-size: .8em;
+    font-weight: 600;
+    color: #6B7280;
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+}
+
+#root-table__employeeFront table tbody tr td:first-child { color: #111827; }
+
+#root-table__employeeFront table tbody tr td:last-child button {
+    height: 100%;
+    width: 100%;
+    color: #0277BD;
+    font-weight: 700;
+    background: none;
+    border: none;
+    text-align: left;
+    padding: 0;
+}
+
+#rootCard-category__forehead {
+    height: 85%;
+    width: 90%;
+    position: relative;
+    margin: 10% 0 0 5%;
+    overflow-y: auto;
+    box-sizing: border-box;
+}
+
+.root-window-details__employee-devices {
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+    background: #111827;
+}
+
