--- a/client/css/pages/login.css
+++ b/client/css/pages/login.css
@@ -257,3 +257,63 @@ main {
     background: none;
     border: 0;
 }
+
+#code-verify, #cardChangePass {
+    height: 100%;
+    width: 66.666667%;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+}
+
+#formCodeVerify {
+    height: auto;
+    width: auto;
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: row;
+}
+
+#formCodeVerify input {
+    height: 3rem;
+    width: 2.25rem;
+    outline-color: #3b82f6;
+    text-align: center;
+    border-radius: 0.125rem;
+    border-width: 2px;
+    border-color: #d1d5db;
+    box-sizing: border-box;
+}
+
+#formCodeVerify  > *:not(:last-child) {
+    margin-right: 0.5rem; /* 8px */
+}
+
+.container__codeIncorrect, .forwardCodeVerify {
+    margin: 1.5rem 0px 0px 0px;
+    height: auto;
+    width: 100%;
+    position: relative;
+}
+
+#forwardCodeVerify {
+    background: none;
+    border: 0;
+}
+
+#code-verify i {
+    font-size: 5rem;
+    padding-bottom: 2rem;
+}
+
+#userEmailChangePass {
+    font-wight: bold;
+}
+
+#cardChangePass #formChangePass p {
+    padding-bottom: 2rem;
+}
+
+#cardChangePass #formChangePass h2 {
+    padding-bottom: 1.5rem;
+}
