--- a/client/css/pages/reports.css
+++ b/client/css/pages/reports.css
@@ -1015,3 +1015,16 @@
     overflow-x: hidden;
     box-sizing: border-box;
 }
+
+.container-button-export {
+    height: 100%;
+    width: auto;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.container-button-export button {
+    margin: 0 5%;
+}
